[package]
name = "copy_image_to_clipboard"
version = "0.1.0"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
edition = "2018"

[dependencies]
iced = { version = "0.3", features = ["svg"] }
libc = "0.2"
resvg = { git = "https://github.com/RazrFalcon/resvg", rev = "6b29007311edc5022635362fe56f6e5c0318fdeb" }
tiny-skia = "0.5.0"
usvg = { git = "https://github.com/RazrFalcon/resvg", rev = "6b29007311edc5022635362fe56f6e5c0318fdeb" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.24"
mach = "0.3"
